3rdParty/Nginx-Ingress/Azure/krypton-router/krypton-router-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: krypton-router-ingress
  namespace: nuance-asraas
spec:
  ingressClassName: nginx-ingress-test
  tls:
  - hosts:
    - grpc-test.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: grpc-test.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: krypton-router
            port:
              number: 8090
